--- a/pocketmode/AndroidManifest.xml
+++ b/pocketmode/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
      Copyright (C) 2016 The CyanogenMod Project
-     Copyright (C) 2017-2018 The LineageOS Project
+                   2017 The LineageOS Project
 
      Licensed under the Apache License, Version 2.0 (the "License"
      you may not use this file except in compliance with the License.
@@ -16,15 +16,16 @@
      limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.lineageos.pocketmode"
+    package="com.android.pocketmode"
     android:versionCode="1"
-    android:versionName="1.2"
+    android:versionName="1.1"
     android:sharedUserId="android.uid.system">
 
-    <uses-permission android:name="lineageos.permission.HARDWARE_ABSTRACTION_ACCESS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <uses-sdk
-        android:minSdkVersion="27" />
+        android:minSdkVersion="21"
+        android:targetSdkVersion="21"/>
 
     <application
         android:label="XiaomiPocketMode"
@@ -34,7 +35,7 @@
 
         <receiver android:name=".Startup" >
             <intent-filter android:priority="99" >
-                <action android:name="lineageos.intent.action.INITIALIZE_LINEAGE_HARDWARE" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
 
